++ routerLink + validando que exista

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<a routerLink="/medicos">Medicos</a>
+<a routerLink="/hospital">hospital</a>
+<a routerLink="/incrementador">incrementador</a>
+
+
 <router-outlet></router-outlet>
