++ schema NO_ERRORS_SCHEMA

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<a routerLink="/medicos">Medicos</a>
-<a routerLink="/hospital">hospital</a>
-<a routerLink="/incrementador">incrementador</a>
+<app-navbar></app-navbar>
 
 
 <router-outlet></router-outlet>
